Fix issue to prevent search form wrapping to next line on mobile nav

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,17 +67,24 @@ body {
 
 /* Main nav */
 .navbar {
-    padding: 2.5rem 1rem;
+    padding: 1.5rem 2rem;
 }
 
 
 .nav-link {
     font-size: 20px;
+    padding: 1.5rem 1rem;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 1.5rem;
     padding-left: 1.5rem;
+}
+
+/* Search form */
+.form-inline {
+    flex-flow: nowrap;
+    align-items: center;
 }
 
 /* Font for page names */
